--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,33 @@
 # Introduction
  
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+青砖生存指南！
 
-## What is Nextra?
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+# 贡献者名单
+<style jsx global>{`
+  .contributor {
+    margin: 10px;
+    display: inline-block;
+    text-align: center;
+  }
+  .list-avatar {
+    width: 80px;
+    height: 80px;
+    border-radius: 40px;
+    display: block;
+  }
+`}</style>
 
-## Documentation
+<div className="contributor">
+  <a href="https://blog.csun.site">
+    <img src="https://cdn.jsdelivr.net/gh/sun-i/pic/redefine-avatar.svg" alt="sun" className="list-avatar"/>
+    <p>sun</p>
+  </a>
+</div>
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+<div className="contributor">
+  <a href="https://blog.csun.site">
+    <img src="https://cdn.jsdelivr.net/gh/sun-i/pic/redefine-avatar.svg" alt="sun" className="list-avatar"/>
+    <p>sun</p>
+  </a>
+</div>
