迁移语雀文档

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -19,9 +19,9 @@
 `}</style>
 
 <div className="contributor">
-  <a href="https://blog.csun.site">
-    <img src="https://cdn.jsdelivr.net/gh/sun-i/pic/redefine-avatar.svg" alt="sun" className="list-avatar"/>
-    <p>sun</p>
+  <a href="https://www.yuque.com/yuqueyonghu6zspvc">
+    <img src="https://cdn.jsdelivr.net/gh/sun-i/pic/644382897.jpg" alt="木之本樱不想当魔卡少女" className="list-avatar"/>
+    <p>木之本樱不想当魔卡少女</p>
   </a>
 </div>
 
