更改子目录首页路由 && 修复贡献者名单显示问题

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,20 +1,26 @@
-# Introduction
- 
-青砖生存指南！
+# 青砖生存指南
 
 
-# 贡献者名单
+## 贡献者名单
 <style jsx global>{`
   .contributor {
-    margin: 10px;
-    display: inline-block;
+    margin: 20px;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
+    width: 80px; /* 确保所有容器宽度一致 */
   }
   .list-avatar {
     width: 80px;
     height: 80px;
-    border-radius: 40px;
-    display: block;
+    border-radius: 50%;
+  }
+  .contributor p {
+    word-wrap: break-word;
+    text-align: center;
+    margin: 5px 0 0 0;
+    width: 100%;
   }
 `}</style>
 
