--- a/pages/各种个人发展方向/各种个人发展方向.mdx
+++ b/pages/各种个人发展方向/各种个人发展方向.mdx
@@ -12,4 +12,5 @@
 
 ---
 
-在大学中，笔者观察到了一些明显的分化现象，总结成了如下的思维导图<br />![image.png](https://cdn.nlark.com/yuque/0/2024/png/35855942/1710135823326-1a96b19c-4000-4691-834c-4017f8d18ae1.png#averageHue=%23dedede&clientId=u45189496-1d74-4&from=paste&height=824&id=u50385e4c&originHeight=824&originWidth=730&originalType=binary&ratio=1&rotation=0&showTitle=false&size=174219&status=done&style=none&taskId=uc8263d4a-a764-41d6-82e0-8630efc95bf&title=&width=730)<br />这样的分化现象是哪些原因导致的，笔者并不能确定，许多关于这一现象的讨论将问题的矛头指向了绩点与保研制度，指向了大学生从包分配到不包分配，笔者后续会将一些总结性强的帖子贴进来<br />“上了大学就轻松了”这个说法在1996年大学不包分配之前说的其实没问题，升入大学就意味着解决了就业问题，结果已经确定，过程自然没有什么压力。而96年以后的大学生需要自己给自己解决就业问题，尤其是疫情以后经济下行周期，就业市场上的岗位减少，结果不确定，大家自然会焦虑，会急切地投入到竞争当中。<br />除了这个大学生有必要焦虑的大背景，保研和评奖评优制度的存在给了绩点在前20%，有望冲击保研和奖学金的同学们一个内卷的理由：拿下保研资格就意味着解决了升学问题，结果也是确定的，不需要再去参与到具有不确定性的竞争当中。而绩点在20%以外的同学们事实上已经失去了竞争保研和评优的机会。这80%的、大部分的学生，仍然是普普通通地过自己的大学生活，当然，这部分人的出路选择和生活状态亦有分化，不过成绩对于其个人发展，就已经变成了一个影响不甚大的维度了。<br />再加上青砖老师的授课水平良莠不齐和越来越多互联网优质学习资料的出现，学生课堂专注程度的降低完全是情有可原的。
+在大学中，笔者观察到了一些明显的分化现象，总结成了如下的思维导图<br />
+![bca61fedf68039791fe05.png](https://img.csun.site/file/bca61fedf68039791fe05.png)<br />这样的分化现象是哪些原因导致的，笔者并不能确定，许多关于这一现象的讨论将问题的矛头指向了绩点与保研制度，指向了大学生从包分配到不包分配，笔者后续会将一些总结性强的帖子贴进来<br />“上了大学就轻松了”这个说法在1996年大学不包分配之前说的其实没问题，升入大学就意味着解决了就业问题，结果已经确定，过程自然没有什么压力。而96年以后的大学生需要自己给自己解决就业问题，尤其是疫情以后经济下行周期，就业市场上的岗位减少，结果不确定，大家自然会焦虑，会急切地投入到竞争当中。<br />除了这个大学生有必要焦虑的大背景，保研和评奖评优制度的存在给了绩点在前20%，有望冲击保研和奖学金的同学们一个内卷的理由：拿下保研资格就意味着解决了升学问题，结果也是确定的，不需要再去参与到具有不确定性的竞争当中。而绩点在20%以外的同学们事实上已经失去了竞争保研和评优的机会。这80%的、大部分的学生，仍然是普普通通地过自己的大学生活，当然，这部分人的出路选择和生活状态亦有分化，不过成绩对于其个人发展，就已经变成了一个影响不甚大的维度了。<br />再加上青砖老师的授课水平良莠不齐和越来越多互联网优质学习资料的出现，学生课堂专注程度的降低完全是情有可原的。
